RuthAdmin - sidebar is now fixed to layout and can be collapsed, also possible to define global sidebar valid for all admin pages

--- a/ruth_admin/app/assets/stylesheets/ruth_admin/components.scss
+++ b/ruth_admin/app/assets/stylesheets/ruth_admin/components.scss
@@ -49,7 +49,8 @@
 		}
 
 		img {
-			max-width: 100%;
+			width: 100%;
+			max-width: 70px;
 		}
 
 		@media (min-width: $screen-sm-min) {
